[project]
name = "alpha-zero-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "wandb>=0.23.1",
    "yfinance>=0.2.66",
]
